[project]
name = "diagram-orchestrator"
version = "0.1.2"
description = "LangGraph orchestrator-worker agent that generates Mermaid ERD and sequence diagrams from a Git repository."
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.6.0",
  "langchain-openai>=0.3.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.1",
  "typer>=0.15.0",
  "rich>=13.9.0",
]

[project.scripts]
diagrams = "diagram_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diagram_agent"]
